--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ install:
   - yarn install --frozen-lockfile
 script:
   - yarn run build
+  - yarn run test
 deploy:
   provider: npm
   email: info@pascal-iske.de
