--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pascaliske/eslint-config",
-  "description": "Shared .eslintrc file.",
+  "description": "Shared ESLint config for TypeScript projects.",
   "version": "0.0.0",
   "license": "MIT",
   "author": {
@@ -9,11 +9,11 @@
     "url": "https://pascal-iske.de"
   },
   "repository": {
-    "url": "https://github.com/pascaliske/tsconfig.git",
+    "url": "https://github.com/pascaliske/eslint-config.git",
     "type": "git"
   },
   "bugs": {
-    "url": "https://github.com/pascaliske/tsconfig/issues"
+    "url": "https://github.com/pascaliske/eslint-config/issues"
   },
   "keywords": [
     "eslint",
@@ -31,13 +31,25 @@
   },
   "scripts": {
     "build": "tsc --project tsconfig.json",
+    "test": "eslint --config dist/index.js src/index.ts",
     "format": "prettier --write \"src/*.ts\"",
     "changelog": "standard-changelog"
+  },
+  "dependencies": {
+    "@typescript-eslint/parser": "^2.0.0",
+    "eslint-config-prettier": "^6.0.0"
+  },
+  "peerDependencies": {
+    "@typescript-eslint/eslint-plugin": "^1.11.0",
+    "eslint": "^6.0.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.1.0",
     "@commitlint/config-conventional": "^8.1.0",
     "@pascaliske/tsconfig": "^1.0.4",
+    "@typescript-eslint/eslint-plugin": "^2.0.0",
+    "eslint": "^6.1.0",
+    "eslint-config-prettier": "^6.0.0",
     "husky": "^3.0.3",
     "lint-staged": "^9.2.1",
     "prettier": "^1.18.2",
