chore(prettier): use shared config

--- a/package.json
+++ b/package.json
@@ -32,9 +32,10 @@
   "scripts": {
     "build": "tsc --project tsconfig.json",
     "test": "eslint --config dist/index.js src/index.ts",
-    "format": "prettier --write \"src/*.ts\"",
+    "format": "prettier --write \"**/*.{ts,md,json}\"",
     "changelog": "standard-changelog"
   },
+  "prettier": "@pascaliske/prettier-config",
   "dependencies": {
     "@typescript-eslint/parser": "^2.28.0",
     "eslint-config-prettier": "^6.10.1"
@@ -46,6 +47,7 @@
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
+    "@pascaliske/prettier-config": "^1.0.2",
     "@pascaliske/tsconfig": "^1.0.4",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "eslint": "^6.8.0",
