chore(npm): ignore un-related files during packing

--- a/.npmignore
+++ b/.npmignore
@@ -1,10 +1,14 @@
+.dependabot
 .github
 .editorconfig
+.envrc
 .huskyrc
 .lintstagedrc
-.travis.yml
 .prettierignore
 src
+*.ts
 *.json
 *.code-*
 *.lock
+*.yml
+*.tgz
