refactor: use rollup for bundling config files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,9 @@
 {
   "extends": "@pascaliske/tsconfig",
   "compilerOptions": {
-    "module": "commonjs",
-    "outDir": "dist",
+    "declaration": false,
     "sourceMap": false,
-    "declaration": false
+    "lib": ["esnext"]
   },
-  "include": [
-    "src/index.ts"
-  ]
+  "include": ["src/index.ts"]
 }
