--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "node": ">=8"
   },
   "scripts": {
-    "build": "tsc --project tsconfig.json",
+    "build": "rollup --config rollup.config.ts",
+    "watch": "rollup --config rollup.config.ts --watch",
     "test": "eslint --config dist/index.js src/index.ts",
     "format": "prettier --write \"**/*.{ts,md,json}\"",
     "changelog": "standard-changelog"
@@ -49,12 +50,17 @@
     "@commitlint/config-conventional": "^8.3.4",
     "@pascaliske/prettier-config": "^1.0.2",
     "@pascaliske/tsconfig": "^1.0.4",
+    "@types/node": "^13.11.1",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
     "husky": "^4.2.5",
     "lint-staged": "^10.1.3",
     "prettier": "^2.0.4",
+    "rollup": "^2.6.1",
+    "rollup-plugin-clear": "^2.0.7",
+    "rollup-plugin-terser": "^5.3.0",
+    "rollup-plugin-typescript2": "^0.27.0",
     "standard-changelog": "^2.0.21",
     "typescript": "^3.8.3"
   }
