--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "watch": "rollup --config rollup.config.ts --watch",
     "test": "eslint --config dist/index.js src/index.ts",
     "format": "prettier --write \"**/*.{ts,md,json}\"",
+    "version": "bump --yes package.json",
     "changelog": "standard-changelog"
   },
   "prettier": "@pascaliske/prettier-config",
@@ -53,6 +54,7 @@
     "@types/node": "^13.11.1",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "@typescript-eslint/parser": "^2.0.0",
+    "bump-cli": "^1.1.3",
     "eslint": "^6.8.0",
     "husky": "^4.2.5",
     "lint-staged": "^10.1.3",
