--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
   "publishConfig": {
     "access": "public"
   },
-  "main": "dist/index.js",
+  "main": "base.js",
   "engines": {
     "node": ">=8"
   },
   "scripts": {
     "build": "rollup --config rollup.config.ts",
     "watch": "rollup --config rollup.config.ts --watch",
-    "test": "eslint --config dist/index.js src/index.ts",
+    "test": "eslint --config .eslintrc.js src/**/*.ts",
     "format": "prettier --write \"**/*.{ts,md,json}\"",
     "version": "bump --yes package.json",
     "changelog": "standard-changelog"
