--- a/package.json
+++ b/package.json
@@ -52,10 +52,10 @@
     "@commitlint/config-conventional": "^12.1.4",
     "@pascaliske/prettier-config": "^1.1.1",
     "@pascaliske/tsconfig": "^1.0.5",
+    "@rstacruz/bump-cli": "^2.0.0",
     "@types/node": "^15.6.1",
     "@typescript-eslint/eslint-plugin": "^4.25.0",
     "@typescript-eslint/parser": "^4.25.0",
-    "bump-cli": "^1.1.3",
     "eslint": "^7.27.0",
     "husky": "^6.0.0",
     "lint-staged": "^11.0.0",
