--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "license": "MIT",
   "author": {
     "name": "Pascal Iske",
-    "email": "info@pascal-iske.de",
-    "url": "https://pascal-iske.de"
+    "email": "info@pascaliske.dev",
+    "url": "https://pascaliske.dev"
   },
   "repository": {
     "url": "https://github.com/pascaliske/eslint-config.git",
@@ -52,13 +52,13 @@
     "@commitlint/config-conventional": "^13.2.0",
     "@pascaliske/prettier-config": "^1.1.2",
     "@pascaliske/tsconfig": "^1.0.6",
-    "@rstacruz/bump-cli": "^2.0.0",
-    "@types/node": "^16.11.5",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
-    "eslint": "^7.32.0",
+    "@rstacruz/bump-cli": "^2.0.1",
+    "@types/node": "^16.11.6",
+    "@typescript-eslint/eslint-plugin": "^5.2.0",
+    "@typescript-eslint/parser": "^5.2.0",
+    "eslint": "^8.1.0",
     "husky": "^7.0.4",
-    "lint-staged": "^11.2.4",
+    "lint-staged": "^11.2.5",
     "prettier": "^2.4.1",
     "rollup": "^2.58.3",
     "rollup-plugin-clear": "^2.0.7",
