--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,13 +8,20 @@ jobs:
       # checkout
       - uses: actions/checkout@v3
 
-      # prepare
+      # setup node
       - uses: actions/setup-node@v3.5.1
         with:
           node-version: '16'
           registry-url: 'https://registry.npmjs.org'
-      - run: yarn install --frozen-lockfile
+
+      # install dependencies
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
+
+      # build
+      - name: Build package
+        run: yarn run build
 
       # test
-      - run: yarn run build
-      - run: yarn run test
+      - name: Run tests
+        run: yarn run test
