--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
   },
   "scripts": {
     "prepare": "husky install",
-    "build": "rollup --config rollup.config.ts",
-    "watch": "rollup --config rollup.config.ts --watch",
+    "build": "rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript",
+    "watch": "rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript --watch",
     "test": "eslint --config .eslintrc.js src/**/*.ts",
     "format": "prettier --write \"**/*.{ts,md,json}\"",
     "version": "bump --yes package.json",
@@ -54,6 +54,7 @@
     "@commitlint/config-conventional": "^17.2.0",
     "@pascaliske/prettier-config": "^1.2.0",
     "@pascaliske/tsconfig": "^1.0.7",
+    "@rollup/plugin-typescript": "^9.0.2",
     "@rstacruz/bump-cli": "^2.0.1",
     "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "^5.42.0",
