--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@pascaliske/eslint-config",
   "description": "Shared ESLint config for TypeScript projects.",
-  "version": "2.0.6",
+  "version": "2.0.7",
   "license": "MIT",
   "author": {
     "name": "Pascal Iske",
@@ -36,7 +36,7 @@
     "test": "eslint --config .eslintrc.js src/**/*.ts",
     "format": "prettier --write \"**/*.{ts,md,json}\"",
     "version": "bump --yes package.json",
-    "changelog": "standard-changelog",
+    "changelog": "standard-changelog -r 1",
     "link": "yarn run build && yarn link",
     "unlink": "yarn unlink"
   },
