--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "node": ">=8"
   },
   "scripts": {
-    "prepare": "husky install",
+    "prepare": "husky",
     "build": "rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript",
     "watch": "rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript --watch",
     "test": "eslint --config .eslintrc.js src/**/*.ts",
@@ -60,7 +60,7 @@
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
     "eslint": "^8.45.0",
-    "husky": "^9.0.0",
+    "husky": "^9.0.7",
     "lint-staged": "^15.0.0",
     "prettier": "^3.0.0",
     "rollup": "^4.0.0",
